examples/test/testpolicy442.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy442
  namespace: namespace105
spec:
  podSelector:
    matchLabels:
      key2: value38
      key19: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value40
          key5: value18
      podSelector:
        matchLabels:
          key39: value23
          key1: value15
          key23: value7
